--- a/src/assets/style/partials/_reset.scss
+++ b/src/assets/style/partials/_reset.scss
@@ -2,4 +2,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+span {
+    color: white;
+    font-size: 20px;
 }
